[package]
name = "iso_country"
version = "0.1.4"
authors = ["Piotr Zolnierek <pzolnierek@gmail.com>"]
license = "MIT"
description = "ISO3166-1 countries"
homepage = "https://github.com/pzol/iso_country"
repository = "https://github.com/pzol/iso_country"

[dependencies]
serde = { version = "1", optional = true }
lazy_static = "1.1.0"

[dev-dependencies]
serde_json = "1"
